# backend/src/api/openapi.rs
@@ -43,6 +43,7 @@ use utoipa::{Modify, OpenApi};
         admin_handlers::get_event_history,
         admin_handlers::get_device_status,
         admin_handlers::get_device_status_history,
+        admin_handlers::get_device_operations,
         admin_handlers::get_event_valid_templates,
         admin_handlers::create_event_valid_template,
         admin_handlers::get_event_valid_template,
@@ -91,6 +92,10 @@ use utoipa::{Modify, OpenApi};
             crate::api::admin_models::CreatePropertyCommandRequest,
             crate::api::admin_models::CreateActionCommandRequest,
             crate::api::admin_models::CreateActionCommandResponse,
+            crate::api::admin_models::DeviceOperationListResponse,
+            crate::api::admin_models::DeviceOperationQuery,
+            crate::api::admin_models::DeviceOperationType,
+            crate::api::admin_models::DeviceOperationView,
             crate::api::admin_models::ActionCommandQuery,
             crate::api::admin_models::ActionInvocationView,
             crate::api::admin_models::ActionInvocationListResponse,
